배너 조회 api 연동

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,41 @@ android:orientation="vertical"
 tools:context=".src.main.MainActivity">
 
 
-<!--<android.support.v7.widget.Toolbar-->
-<!--    android:id="@+id/toolbar"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="?attr/actionBarSize"-->
-<!--    android:background="?attr/colorPrimary" />-->
+<RelativeLayout
+    android:id="@+id/app_bar"
+    android:layout_width="match_parent"
+    android:layout_height="30dp"
+    android:layout_margin="10dp">
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:src="@drawable/img_barlogo"/>
+
+    <ImageView
+        android:id="@+id/icon_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_search"
+        android:layout_toLeftOf="@+id/icon_alarm"
+        android:clickable="true"/>
+
+    <ImageView
+        android:id="@+id/icon_alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_alarm"
+        android:layout_alignParentRight="true"
+        android:clickable="true"/>
+</RelativeLayout>
 
 
 <androidx.viewpager.widget.ViewPager
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:layout_below="@+id/toolbar">
+    android:background="#ffffff"
+    android:layout_below="@+id/app_bar">
 
 </androidx.viewpager.widget.ViewPager>
 
