--- a/app/src/main/res/layout/fragment_main_investment.xml
+++ b/app/src/main/res/layout/fragment_main_investment.xml
@@ -10,7 +10,7 @@ android:layout_height="match_parent">
     android:id="@+id/pager_investment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+    android:background="#ffffff">
 
 </androidx.viewpager.widget.ViewPager>
 
