--- a/app/src/main/res/layout/fragment_main_reward.xml
+++ b/app/src/main/res/layout/fragment_main_reward.xml
@@ -11,7 +11,7 @@
         android:id="@+id/pager_reward"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:background="#ffffff">
 
     </androidx.viewpager.widget.ViewPager>
 
