--- a/app/src/main/res/layout/fragment_main_investment.xml
+++ b/app/src/main/res/layout/fragment_main_investment.xml
@@ -22,7 +22,9 @@ android:layout_height="match_parent">
         android:layout_height="50dp"
         android:background="#ffffff"
         app:tabGravity="fill"
-        app:tabMode="scrollable">
+        app:tabMode="scrollable"
+        app:tabIndicatorColor="#000000"
+        app:tabIndicatorFullWidth="false">
 
     </com.google.android.material.tabs.TabLayout>
 
