--- a/app/src/main/res/layout/fragment_main_reward.xml
+++ b/app/src/main/res/layout/fragment_main_reward.xml
@@ -5,8 +5,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager_reward"
         android:layout_width="match_parent"
@@ -20,7 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:tabGravity="fill"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        app:tabIndicatorColor="#000000"
+        app:tabIndicatorFullWidth="false">
 
     </com.google.android.material.tabs.TabLayout>
 
