--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/mypage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="마이페이지" />
+        android:text="와디즈에 처음 오셨나요?"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="회원가입하고 \n 다양한 혜택을 받으세요!"
+    android:layout_centerInParent="true"
+    android:gravity="center"/>
 
-
-</RelativeLayout>
+</LinearLayout>
