--- a/app/src/main/res/layout/recyclerview_project_rewardhome.xml
+++ b/app/src/main/res/layout/recyclerview_project_rewardhome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:orientation="horizontal"
@@ -39,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="뷰티"
-                android:textSize="12dp"/>
+                android:textSize="12sp"/>
 
             <View
                 android:layout_width="1dp"
