--- a/app/src/main/res/layout/fragment_main_moreinfo.xml
+++ b/app/src/main/res/layout/fragment_main_moreinfo.xml
@@ -19,4 +19,11 @@
         android:onClick="customOnClick"
         android:text="@string/app_name" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:onClick="customOnClick"
+        android:text="@string/app_name" />
 </RelativeLayout>
