--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -11,15 +11,28 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="와디즈에 처음 오셨나요?"
-        android:textSize="30sp"
         android:textColor="#000000"
-        android:textStyle="bold"/>
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="회원가입하고 \n 다양한 혜택을 받으세요!"
-    android:layout_centerInParent="true"
-    android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="회원가입하고 \n 다양한 혜택을 받으세요!"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/mypage_btn_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@color/mainColor"
+        android:paddingHorizontal="25dp"
+        android:paddingVertical="15dp"
+        android:text="로그인 / 회원가입"
+        android:textColor="#ffffff"
+        android:textSize="23sp" />
 
 </LinearLayout>
