--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="lineColor">#cfcfcf</color>
+    <color name="mainColor">#00C4C4</color>
 
 </resources>
