--- a/app/src/main/res/drawable/signup_edittext_style.xml
+++ b/app/src/main/res/drawable/signup_edittext_style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#ffffff" />
+        <solid android:color="#F9F9F9" />
         <stroke android:width="1dp" android:color="#F1F2F6"/>
         <size android:height="50dp"/>
         <padding android:left="15dp"/>
