--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -206,6 +206,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/activity_login_btn_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
