프로젝트 상세조회 api 연동

--- a/app/src/main/res/drawable/progressbar_rewardhome.xml
+++ b/app/src/main/res/drawable/progressbar_rewardhome.xml
@@ -15,7 +15,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#62a6a0" />
+                <solid android:color="@color/mainColor" />
             </shape>
         </clip>
     </item>
