더보기 페이지 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="lineColor">#cfcfcf</color>
     <color name="mainColor">#00C4C4</color>
+    <color name="light_grey_background">#F9F9F9</color>
 
 </resources>
