--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#F9F9F9"
+        android:background="@color/light_grey_background"
         android:gravity="center"
         android:orientation="horizontal">
 
