--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -22,6 +22,7 @@
         android:src="@drawable/icon_back" />
 
     <TextView
+        android:id="@+id/project_details_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="4"
@@ -64,7 +65,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">
 
@@ -77,112 +78,117 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="20dp">
 
                 <TextView
                     android:id="@+id/project_details_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/project_details_title"
-                    android:textSize="21sp"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:textSize="21sp" />
 
                 <TextView
                     android:id="@+id/project_details_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="홈리빙"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="20dp"
+                    android:text="홈리빙" />
 
                 <TextView
                     android:id="@+id/project_details_info_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/project_details_info_text"
                     android:layout_marginTop="40dp"
-                    android:lineSpacingExtra="5dp"/>
+                    android:lineSpacingExtra="5dp"
+                    android:text="@string/project_details_info_text" />
 
                 <TextView
                     android:id="@+id/project_details_remaining"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12일 남음"
                     android:layout_marginTop="40dp"
-                    android:textSize="20sp"
-                    android:textColor="#000000"/>
+                    android:text="12일 남음"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
 
                 <ProgressBar
                     android:id="@+id/project_details_progress_bar"
-                    android:max="100"
-                    android:progress="50"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:progressDrawable="@drawable/progressbar_rewardhome"
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
-                    android:layout_marginTop="20dp"/>
+                    android:layout_marginTop="20dp"
+                    android:max="100"
+                    android:progress="50"
+                    android:progressDrawable="@drawable/progressbar_rewardhome" />
 
-                <TableLayout
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
 
-                    <TableRow>
-                        <TextView
-                            android:id="@+id/project_details_achievement"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="1587"
-                            android:textSize="20sp"
-                            android:textColor="#000000"/>
+                    <TextView
+                        android:id="@+id/project_details_achievement"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1587"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="% 달성"
-                            android:layout_marginStart="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="% 달성" />
 
-                    </TableRow>
+                </LinearLayout>
 
-                    <TableRow
-                        android:layout_marginTop="20dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/project_details_funded"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="7,937,600"
-                            android:textSize="20sp"
-                            android:textColor="#000000"/>
+                    <TextView
+                        android:id="@+id/project_details_funded"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="7,937,600"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="원 펀딩"
-                            android:layout_marginStart="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="원 펀딩" />
 
-                    </TableRow>
+                </LinearLayout>
 
-                    <TableRow
-                        android:layout_marginTop="20dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/project_details_supporter_cnt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="231"
-                            android:textSize="20sp"
-                            android:textColor="#000000"/>
+                    <TextView
+                        android:id="@+id/project_details_supporter_cnt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="231명"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="명의 서포터"
-                            android:layout_marginStart="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:text="의 서포터" />
 
-                    </TableRow>
+                </LinearLayout>
 
-                </TableLayout>
 
                 <TextView
                     android:id="@+id/project_details_btn_fund"
@@ -202,6 +208,7 @@
                     android:layout_marginTop="20dp">
 
                     <TableRow>
+
                         <Button
                             android:id="@+id/project_details_like_cnt_btn"
                             style="?android:attr/borderlessButtonStyle"
@@ -232,26 +239,26 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="펀딩하기는 쇼핑하기가 아닙니다!"
-                    android:layout_marginTop="3dp"/>
+                    android:layout_marginTop="3dp"
+                    android:text="펀딩하기는 쇼핑하기가 아닙니다!" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/mainColor"
-                    android:layout_marginTop="50dp">
+                    android:layout_marginTop="50dp"
+                    android:background="@color/mainColor">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="목표 금액"/>
+                        android:text="목표 금액" />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/lineColor"
-                    android:layout_marginTop="30dp"/>
+                    android:layout_marginTop="30dp"
+                    android:background="@color/lineColor" />
 
 
             </LinearLayout>
@@ -259,7 +266,8 @@
             <com.softsquared.wadiz.src.projectDetails.RoadView
                 android:id="@+id/wv_detail"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"/>
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
