--- a/app/src/main/res/layout/activity_project_details.xml
+++ b/app/src/main/res/layout/activity_project_details.xml
@@ -1,103 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
-    android:id="@+id/project_details_app_bar"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="#F9F9F9"
-    android:gravity="center"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/project_details_icon_go_back"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_weight="1"
-        android:gravity="start"
-        android:src="@drawable/icon_back" />
-
-    <TextView
-        android:id="@+id/project_details_bar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:gravity="center"
-        android:text="제품제목"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/search_icon_go_home"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_weight="1"
-        android:gravity="end"
-        android:src="@drawable/icon_home" />
-</LinearLayout>
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/project_details_tab_bar"
+        android:id="@+id/project_details_app_bar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#B3F9F9F9"
+        android:background="#F9F9F9"
         android:gravity="center"
-        android:layout_below="@+id/project_details_app_bar"
-        app:tabIndicatorColor="@color/mainColor"
-        app:tabIndicatorFullWidth="false"
-        app:tabMode="scrollable"/>
+        android:orientation="horizontal">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/project_details_view_pager"
+        <ImageView
+            android:id="@+id/project_details_icon_go_back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:src="@drawable/icon_back" />
+
+        <TextView
+            android:id="@+id/project_details_bar_title"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:text="제품제목제품제목블라블라블라블라"
+            android:paddingHorizontal="30dp"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:singleLine="true"/>
+
+        <ImageView
+            android:id="@+id/search_icon_go_home"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:src="@drawable/icon_home" />
+    </LinearLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/project_details_tab_bar"
-        android:layout_above="@+id/project_details_fund_bar"/>
+        android:layout_above="@+id/project_details_fund_bar"
+        android:layout_below="@+id/project_details_app_bar">
 
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/project_details_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/project_details_tab_bar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#90ffffff"
+            android:gravity="center"
+            app:tabIndicatorColor="@color/mainColor"
+            app:tabIndicatorFullWidth="false"
+            app:tabMode="scrollable" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/project_details_fund_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
         android:background="#ffffff"
         android:gravity="center"
-        android:padding="5dp"
-        android:layout_alignParentBottom="true">
+        android:orientation="horizontal"
+        android:padding="5dp">
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:src="@drawable/icon_alarm"
             android:layout_weight="1"
-            android:padding="10dp"
-            android:background="@drawable/login_etc_btn_style"/>
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/icon_show_all"
-            android:layout_weight="1"
-            android:padding="10dp"
             android:background="@drawable/login_etc_btn_style"
-            android:layout_marginStart="5dp"/>
+            android:padding="10dp"
+            android:src="@drawable/icon_alarm" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/login_etc_btn_style"
+            android:padding="10dp"
+            android:src="@drawable/icon_show_all" />
 
         <Button
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="펀딩하기"
-            android:background="@color/mainColor"
+            android:layout_marginStart="5dp"
             android:layout_weight="4"
+            android:background="@color/mainColor"
+            android:text="펀딩하기"
             android:textColor="#ffffff"
-            android:textStyle="bold"
             android:textSize="18sp"
-            android:layout_marginStart="5dp"/>
+            android:textStyle="bold" />
     </LinearLayout>
 </RelativeLayout>
