--- a/app/src/main/res/layout/fragment_project_details_community.xml
+++ b/app/src/main/res/layout/fragment_project_details_community.xml
@@ -4,16 +4,16 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="community"/>
-        </LinearLayout>
+                android:text="community"
+                android:background="#80ff9f33"/>
+    </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
