--- a/app/src/main/res/layout/fragment_project_details_news.xml
+++ b/app/src/main/res/layout/fragment_project_details_news.xml
@@ -8,7 +8,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginTop="50dp">
 
             <TextView
                 android:layout_width="wrap_content"
