--- a/app/src/main/res/layout/fragment_project_details_story.xml
+++ b/app/src/main/res/layout/fragment_project_details_story.xml
@@ -8,20 +8,19 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/project_details_tab_bar">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center">
+            android:layout_marginTop="50dp">
 
             <ImageView
                 android:id="@+id/project_details_thumbnail"
-                android:layout_width="wrap_content"
-                android:layout_height="310dp"
-                android:src="@drawable/image_global_fragment" />
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:src="@drawable/image_project_details_thumbnail" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -214,7 +213,7 @@
             <com.softsquared.wadiz.src.projectDetails.fragmentPages.story.RoadView
                 android:id="@+id/wv_detail"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"/>
+                android:layout_height="300dp" />
 
         </LinearLayout>
 
