--- a/app/src/main/res/layout/fragment_rewardhome.xml
+++ b/app/src/main/res/layout/fragment_rewardhome.xml
@@ -25,7 +25,7 @@
                 android:layout_width="80dp"
                 android:layout_height="2dp"
                 android:layout_gravity="bottom"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginBottom="10dp"
                 android:max="5"
                 android:progress="1"
