--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/search_app_bar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F9F9F9"
@@ -53,7 +54,8 @@
         android:hint="@string/search_bar_hint"
         android:textSize="13sp"
         android:inputType="text"
-        android:imeOptions="actionSearch"/>
+        android:imeOptions="actionSearch"
+        android:layout_below="@+id/search_app_bar"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/activity_search_tab_layout"
@@ -62,6 +64,22 @@
         app:tabGravity="fill"
         android:background="#ffffff"
         app:tabIndicatorColor="#000000"
-        app:tabIndicatorFullWidth="false"/>
+        app:tabIndicatorFullWidth="false"
+        android:layout_below="@id/activity_search_et"/>
 
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lineColor"
+        android:layout_above="@id/search_delete_all_btn"/>
+
+    <ImageView
+        android:id="@+id/search_delete_all_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/icon_delete_all"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
