--- a/app/src/main/res/layout/fragment_project_details_community.xml
+++ b/app/src/main/res/layout/fragment_project_details_community.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="20dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="community"
-                android:background="#80ff9f33"/>
-    </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="5dp"
+            android:text="서포터님! \n처음 메이커의 열정과 가치에 공감헤주셨듯, 마지막까지 메이커를 응원해주세요."
+            android:textColor="#000000"
+            android:textSize="17sp" />
 
-    </androidx.core.widget.NestedScrollView>
+        <TextView
+            style="@style/small_lignt_font"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+
+            android:text="@string/fund_guide_details2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:lineSpacingExtra="5dp"
+            android:text="FAQ"
+            android:textColor="#000000"
+            android:textSize="17sp" />
+
+        <TextView
+            style="@style/small_lignt_font"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="리워드, 배송 등 펀딩에 대해 궁금한 사항이 있다면?" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="5dp"
+            android:text="메이커에게 문의하기"
+            android:textColor="#000000"
+            android:textSize="17sp"
+            android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
