--- a/app/src/main/res/layout/fragment_project_details_fund_guide.xml
+++ b/app/src/main/res/layout/fragment_project_details_fund_guide.xml
@@ -2,19 +2,84 @@
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center"
             android:layout_marginTop="50dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="fund guide"/>
+                android:text="@string/project_details_fund_guide_main"
+                android:textColor="#000000"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="리워드 발송이 지연될 수 있습니다."
+                style="@style/small_bold_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="위 기간까지 리워드 발송이 시작되지 않은 경우"
+                style="@style/small_bold_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="프로젝트의 교화/환불/AS 정책은 다음과 같습니다."
+                style="@style/small_bold_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fund_guide_details1"
+                android:layout_marginTop="20dp"
+                style="@style/small_lignt_font"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
