--- a/app/src/main/res/layout/fragment_project_details_news.xml
+++ b/app/src/main/res/layout/fragment_project_details_news.xml
@@ -2,7 +2,8 @@
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -14,7 +15,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="news"/>
+                android:text="새 소식이 없습니다."
+                android:textSize="20sp"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
