--- a/app/src/main/res/layout/fragment_project_details_story.xml
+++ b/app/src/main/res/layout/fragment_project_details_story.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ffffff"
-    android:orientation="vertical">
+    android:background="#ffffff">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <LinearLayout
+            android:descendantFocusability="blocksDescendants"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="50dp">
 
@@ -213,10 +209,9 @@
             <com.softsquared.wadiz.src.projectDetails.fragmentPages.story.RoadView
                 android:id="@+id/wv_detail"
                 android:layout_width="match_parent"
-                android:layout_height="300dp" />
+                android:layout_height="fill_parent" />
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+</androidx.core.widget.NestedScrollView>
