--- a/app/src/main/res/layout/fragment_project_details_supporter.xml
+++ b/app/src/main/res/layout/fragment_project_details_supporter.xml
@@ -2,20 +2,28 @@
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="20dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
             android:layout_marginTop="50dp">
 
             <TextView
+                android:id="@+id/supporter_tv_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="supporter"/>
+                android:text="현재 이 프로젝트에"
+                android:textSize="30sp"/>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/supporter_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="000명의 참여가 이루어졌습니다."
+                android:textSize="30sp"/>
+
+        </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
