--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#2d3e50</color>
+    <color name="colorAccent">#00C4C4</color>
 
     <color name="lineColor">#cfcfcf</color>
     <color name="mainColor">#00C4C4</color>
