--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,17 @@
         <item name="android:lineSpacingExtra">5dp</item>
     </style>
 
+
+    <style name="policy_checkbox_text_light"  parent="@android:style/Widget.TextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">5dp</item>
+        <item name="android:textColor">#cfcfcf</item>
+    </style>
+
+
+    <style name="policy_checkbox_text_selected"  parent="@android:style/Widget.TextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">5dp</item>
+        <item name="android:textColor">#808080</item>
+    </style>
 </resources>
