--- a/app/src/main/res/layout/fragment_main_mypage.xml
+++ b/app/src/main/res/layout/fragment_main_mypage.xml
@@ -18,6 +18,7 @@
         android:padding="20dp">
 
         <TextView
+            android:id="@+id/mypage_edit_profile_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/profile_edit_btn_border"
@@ -26,6 +27,7 @@
             android:textSize="12sp" />
 
         <RelativeLayout
+            android:id="@+id/mypage_show_profile_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
