--- a/app/src/main/res/layout/fragment_project_details_story.xml
+++ b/app/src/main/res/layout/fragment_project_details_story.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
@@ -206,12 +207,13 @@
 
             </LinearLayout>
 
-            <com.softsquared.wadiz.src.projectDetails.fragmentPages.story.RoadView
+            <WebView
                 android:id="@+id/wv_detail"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="match_parent"
+                tools:ignore="WebViewLayout" />
 
         </LinearLayout>
 
 
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
