--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,8 +27,21 @@
 
 
     <style name="policy_checkbox_text_selected"  parent="@android:style/Widget.TextView">
-        <item name="android:textSize">16sp</item>
-        <item name="android:lineSpacingExtra">5dp</item>
-        <item name="android:textColor">#808080</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:lineSpacingExtra">5dp</item>
+    <item name="android:textColor">#808080</item>
+</style>
+
+    <style name="profileBigFont"  parent="@android:style/Widget.TextView">
+    <item name="android:textSize">30sp</item>
+    <item name="android:textColor">#3363ff</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:gravity">center</item>
+</style>
+
+    <style name="profileSmallFont"  parent="@android:style/Widget.TextView">
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#3363ff</item>
     </style>
+
 </resources>
